fix issue with font sizing and nav bar overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,8 @@ nav {
   color: #eee;
   padding: 15px;
   height: 100%;
-  width: 240px;
+  min-width: 240px;
+  max-width: 15em;
   position: fixed;
 }
 
